--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 
        <!-- Theme style -->
-    <link rel="stylesheet" href="./dist/dist/css/AdminLTE.css">
+   <!--  <link rel="stylesheet" href="./dist/dist/css/AdminLTE.css"> -->
     
     <!-- AdminLTE Skins -->
-    <link rel="stylesheet" href="./dist/dist/css/skins/_all-skins.min.css">
+   <!--  <link rel="stylesheet" href="./dist/dist/css/skins/_all-skins.min.css"> -->
 
 
     <!-- DataTables -->
@@ -43,7 +43,7 @@
 
 
       <!-- AdminLTE App -->
-      <script src="./dist/dist/js/adminlte.min.js"></script>
+      <!-- <script src="./dist/dist/js/adminlte.min.js"></script> -->
     
     <script  src="https://cdn.datatables.net/1.13.5/js/dataTables.bootstrap.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/dataTables.responsive.min.js"></script>
