--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 
 
       <!-- AdminLTE App -->
-      <script src="./dist/dist/js/adminlte.min.js"></script>
-    
+     <!--  <script src="./dist/dist/js/adminlte.min.js"></script> -->
+       <script type="module" src="/src/admin.jsx"></script>
+
+
     <script  src="https://cdn.datatables.net/1.13.5/js/dataTables.bootstrap.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/dataTables.responsive.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/responsive.bootstrap.min.js"></script>
