--- a/index.html
+++ b/index.html
@@ -45,12 +45,24 @@
 
       <!-- AdminLTE App -->
     <script src="./dist/dist/js/adminlte.min.js"></script>
-      <!--  <script type="module" src="/src/admin.jsx"></script> -->
+    
 
 
     <script  src="https://cdn.datatables.net/1.13.5/js/dataTables.bootstrap.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/dataTables.responsive.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/responsive.bootstrap.min.js"></script>
+
+
+
+    <!-- SWEET ALERT -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.20/sweetalert2.min.js" integrity="sha512-2AOp8GEFv1X43dZpYqOp34WD+skmM18yOrCxS/S1Mh6VShz7uxlPhKmA98fsPrE7MMMtZgjshiMHKmzWtZR5uA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <link href="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css
+      " rel="stylesheet">
+
+
+
 
 
   </head>
