INSERTANDO JS de adminLTE

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 
       <!-- AdminLTE App -->
-   <!--  <script src="/dist/dist/js/adminlte.min.js"></script> -->
+    <script type="module" src="/dist/dist/js/adminlte.min.js"></script>
     
-   <script type="module" src="/src/admin.jsx"></script>
+   <!-- <script type="module" src="/src/admin.jsx"></script> -->
 
     <script  src="https://cdn.datatables.net/1.13.5/js/dataTables.bootstrap.min.js"></script>
     <script  src="https://cdn.datatables.net/responsive/2.2.6/js/dataTables.responsive.min.js"></script>
