--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
 
 
 
+      <!-- 15-11-2023 TRATANTO DE METER EL CALENDARIO -->
+      
+      <!-- Moment.js -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
+
+      <!-- FULL CALENDAR - EL CALENDARIO GRANDE -->
+      <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
+
+  
+
+      <!-- CDN PARA HACER USO DE DATE PICKER -->
+      <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+
+     
 
   </head>
   <body class="hold-transition skin-blue sidebar-collapse sidebar-mini login-page">
